force-app/main/default/objects/Student__c/fields/Average_Grade__c.field-meta.xml
<CustomField>
    <fullName>Average_Grade__c</fullName>
    <description>Average grade among related enrollments.</description>
    <label>Average Grade</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>