force-app/main/default/objects/Student__c/fields/Has_Increased_Scholarship__c.field-meta.xml
<CustomField>
    <fullName>Has_Increased_Scholarship__c</fullName>
    <description>Indicates whether a student was awarded an increased scholarship based on the Scholarship field.</description>
    <formula>IF(TEXT(Scholarship__c) = &quot;Regular&quot; || TEXT(Scholarship__c) = &quot;Increased&quot; || TEXT(Scholarship__c) = &quot;Academic&quot;, TRUE, FALSE)</formula>
    <label>Has Increased Scholarship</label>
    <type>Checkbox</type>
</CustomField>