force-app/main/default/objects/Student__c/fields/Scholarship__c.field-meta.xml
<CustomField>
    <fullName>Scholarship__c</fullName>
    <description>Type of the scholarship awarded to a student.</description>
    <label>Scholarship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Increased</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>