force-app/main/default/objects/Student__c/fields/Scholarship_Rate__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Rate__c</fullName>
    <label>Scholarship Rate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>