force-app/main/default/objects/Student__c/recordTypes/test1.recordType-meta.xml
<RecordType>
    <fullName>test1</fullName>
    <active>true</active>
    <label>test1</label>
</RecordType>