force-app/main/default/objects/Student__c/validationRules/Can_Student_Have_Academic_Scholarship.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Student_Have_Academic_Scholarship</fullName>
    <active>true</active>
    <errorConditionFormula>IF( TEXT(Year_of_Study__c) = &quot;1&quot; &amp;&amp; TEXT( Scholarship__c) = &quot;Academic&quot;, TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Scholarship__c</errorDisplayField>
    <errorMessage>Field Scholarship.</errorMessage>
</ValidationRule>